# src/api/dtos/centrifugo/generate-centrifugo-connection-token.output.dto.ts
@@ -1,0 +1,7 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { JWT } from 'src/common/types';
+
+export class GenerateCentrifugoConnectionTokenOutputDTO {
+  @ApiProperty()
+  connectionToken: JWT;
+}
