# src/api/dtos/centrifugo/generate-centrifugo-subscription-token.output.dto.ts
@@ -1,0 +1,7 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { JWT } from 'src/common/types';
+
+export class GenerateCentrifugoSubscriptionTokenOutputDTO {
+  @ApiProperty()
+  subscriptionToken: JWT;
+}
